# nemo

./: .gitignore  .gitpod.yml  Makefile  README.md  curl.sh  go.mod  go.sum
common/database/: db.go
common/logger/: logger.go
prisma/: schema.prisma
src/: Makefile  main.go
src/server/: core.go  networking.go
src/service/client/: .gitignore  Makefile  core.go  main.py
src/service/client/lib/: prependShell.py  prepend_shell.py
src/service/daemon/: .gitignore  Cargo.toml  Makefile  fleet.toml
src/service/daemon/.cargo/: config.toml
src/service/daemon/shared/: .gitignore  Cargo.toml  Makefile
src/service/daemon/shared/src/: lib.rs  main.rs
src/service/daemon/src/: main.rs  ngrok.rs
src/service/daemon/utils/foreign_string/: Cargo.toml
src/service/daemon/utils/foreign_string/src/: lib.rs
src/service/daemon/utils/logger/: .gitignore  Cargo.toml
src/service/daemon/utils/logger/src/: lib.rs
src/service/payload/: Makefile  build-gccgo.sh  build.sh  install-gccgo.sh  payload.go
