[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
# ngrok = { git = "https://github.com/ngrok/ngrok-rs" }
ngrok = "0.6.0"
url = "2.3.1"
tar = "0.4.38"
flate2 = "1.0.25"
anyhow = "1.0.66"
ctrlc = { version = "3.2.4", features = ["termination"] }

[dependencies.logger]
path = "./utils/logger"