[package]
name = "shared"
version = "0.1.0"
authors = ["DevComp <hi@devcomp.xyz>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[dependencies.logger]
path = "../utils/logger"

[dependencies.foreign_string]
path = "../utils/foreign_string"

[lib]
crate-type = ["cdylib"]