[package]
name = "shared"
version = "0.1.0"
authors = ["DevComp <hi@devcomp.xyz>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# reqwest = { version = "0.11.13", features = ["json", "blocking"] }
ureq = { version = "2.5.0", features = ["json", "charset"] }
# tokio = { version = "1", features = ["full"] }
libc = "0.2.138"
# serde_json = "1.0.89"
# serde = "1.0.150"
# ijson = "0.1.3"
# isahc = "1.7.2"

[dependencies.logger]
path = "../utils/logger"

# [dependencies.foreign_string]
# path = "../utils/foreign_string"

[lib]
crate-type = ["cdylib"]