[package]
name = "shared"
version = "0.1.0"
authors = ["DevComp <hi@devcomp.xyz>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.5.0", features = ["json", "charset"] }
libc = "0.2.138"

[dependencies.logger]
path = "../utils/logger"

# [dependencies.foreign_string]
# path = "../utils/foreign_string"

[dependencies.daemon]
path = "../"

[lib]
crate-type = ["cdylib"]
